--- a/sharework_skills/config/pose_constraints_test.yaml
+++ b/sharework_skills/config/pose_constraints_test.yaml
@@ -8,25 +8,22 @@ tasks:
       -   name: "geometric_constraint_1"
           type: "plane"
           frame: "world"
-          origin: [ 0.5,0.0,0.0 ]       # point on the plane
+          origin: [ 0.55,0.0,0.0 ]       # point on the plane
           normal: [ -1,0,0 ]             # normal vector of the plane     
       # Define an orientation constraint around z-axis with max angle 0.3 radians
       -   name: "geometric_constraint_2"
           type: "orientation"
           frame: "world"
-          max_angle: [-1.0,-1.0,0.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
-      # Define a line constraint along x-axis at y=0.0, z=0.5
-      # -   name: "geometric_constraint_3"
-      #     type: "line"
-      #     frame: "world"
-      #     max_distance: 0.80          # max distance from the line
-      #     origin: [0.25,0.0,1.3]     # point on the line
-      #     direction: [0.0,1.0,0.0]   # line direction vector
+          max_angle: [-1.0,-1.0,10.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_3"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.0,1.2,0.0 ]       # point on the plane
+          normal: [ 0,0,1 ]             # normal vector of the plane     
 
   - name: "task2"
-    # goal_configuration: [1.811413445, -2.06692871738724, 2.3611616185427997, -1.570796327, 1.570796327, 0.0]
     goal_configuration: [2.35619, -1.29154, 1.88, -2.19911, 1.64061, 0.0]
-    # goal_configuration: [0.785398,-1.5708,2.35619,-2.26893,1.5708,0.785398]
 
     # geometric constraints definition
     geometric_constraints:
@@ -34,17 +31,104 @@ tasks:
       -   name: "t2_geometric_constraint_1"
           type: "plane"
           frame: "world"
-          origin: [0.5,0.0,0.0]       # point on the plane
+          origin: [0.55,0.0,0.0]       # point on the plane
           normal: [-1,0,0]             # normal vector of the plane
       # Define an orientation constraint around z-axis with max angle 0.3 radians
-      # -   name: "t2_geometric_constraint_2"
-      #     type: "orientation"
-      #     frame: "ur10e_tool0"
-      #     max_angle: [-1.0,-1.0,10.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
+      -   name: "t2_geometric_constraint_2"
+          type: "orientation"
+          frame: "ur10e_tool0"
+          max_angle: [-1.0,-1.0,0.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
       # Define a line constraint along x-axis at y=0.0, z=0.5
       -   name: "t2_geometric_constraint_3"
           type: "line"
           frame: "world"
-          max_distance: 0.80          # max distance from the line
+          max_distance: 0.40          # max distance from the line
           origin: [0.25,0.0,1.3]     # point on the line
           direction: [0.0,1.0,0.0]   # line direction vector
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_3"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.0,1.2,0.0 ]       # point on the plane
+          normal: [ 0,0,1 ]             # normal vector of the plane   
+
+  - name: "task3"
+    goal_configuration: [0.55, -1.01, 1.80, -2.29, 1.5, 1.81514]
+
+    # geometric constraints definition
+    geometric_constraints:
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "t3_geometric_constraint_1"
+          type: "plane"
+          frame: "world"
+          origin: [0.55,0.0,0.0]       # point on the plane
+          normal: [-1,0,0]             # normal vector of the plane
+      # Define an orientation constraint around z-axis with max angle 0.3 radians
+      -   name: "t3_geometric_constraint_2"
+          type: "orientation"
+          frame: "ur10e_tool0"
+          max_angle: [-1.0,-1.0,0.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
+      # Define a line constraint along x-axis at y=0.0, z=0.5
+      -   name: "t3_geometric_constraint_3"
+          type: "line"
+          frame: "world"
+          max_distance: 0.40          # max distance from the line
+          origin: [0.25,0.0,1.3]     # point on the line
+          direction: [0.0,1.0,0.0]   # line direction vector
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_3"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.0,1.2,0.0 ]       # point on the plane
+          normal: [ 0,0,1 ]             # normal vector of the plane     
+  - name: "task4"
+    goal_configuration: [0.57, -1.20, 1.50, -1.85, 1.52, 1.7814]
+
+    # geometric constraints definition
+    geometric_constraints:
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "t4_geometric_constraint_1"
+          type: "plane"
+          frame: "world"
+          origin: [0.55,0.0,0.0]       # point on the plane
+          normal: [-1,0,0]             # normal vector of the plane
+      # Define an orientation constraint around z-axis with max angle 0.3 radians
+      -   name: "t4_geometric_constraint_2"
+          type: "orientation"
+          frame: "ur10e_tool0"
+          max_angle: [-1.0,-1.0,0.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
+      # Define a line constraint along x-axis at y=0.0, z=0.5
+      -   name: "t4_geometric_constraint_3"
+          type: "line"
+          frame: "world"
+          max_distance: 0.10          # max distance from the line
+          origin: [0.35,0.67,0.0]     # point on the line
+          direction: [0.0,0.0,1.0]   # line direction vector
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_3"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.0,1.2,0.0 ]       # point on the plane
+          normal: [ 0,0,1 ]             # normal vector of the plane     
+  - name: "task5"
+    goal_configuration: [1.570796327, -2.443460953, 2.443460953, -1.570796327, 1.570796327, 0.0]
+
+    # geometric constraints definition
+    geometric_constraints:
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_1"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.65,0.0,0.0 ]       # point on the plane
+          normal: [ -1,0,0 ]             # normal vector of the plane     
+      # Define an orientation constraint around z-axis with max angle 0.3 radians
+      -   name: "geometric_constraint_2"
+          type: "orientation"
+          frame: "world"
+          max_angle: [-1.0,-1.0,10.3]  # [x,y,z] max angle in radians around each axis, -1.0 means no constraints
+      # Define a plane constraint at y=0.5 with normal along y-axis
+      -   name: "geometric_constraint_3"
+          type: "plane"
+          frame: "world"
+          origin: [ 0.0,1.2,0.0 ]       # point on the plane
+          normal: [ 0,0,1 ]             # normal vector of the plane     
